@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.7.2) unstable; urgency=low
 
   * response: optimized transformed response headers
   * handler: mangle CGI and FastCGI headers
+  * header-forward: generate the X-Forwarded-For header
 
  --
 
